fix the loader misalignment

--- a/web/client/themes/default/less/loaders.less
+++ b/web/client/themes/default/less/loaders.less
@@ -47,7 +47,6 @@ div#mapstore-globalspinner {
 	.mapstore-circle-loader(12px, 100%, @ms2-color-primary);
 }
 .mapstore-inline-loader {
-    margin: @padding-left-square-md;
     .mapstore-circle-loader(@icon-size-md/10, @icon-size-md, @ms2-color-primary);
 }
 @-webkit-keyframes mapstore-circle-load8 {
